...
          const SizedBox(height: 16),
          Text(
            success
                ? (operationType == OperationType.transfer
                      ? 'Transfer Successful'
                      : operationType == OperationType.debin
                      ? 'DEBIN Completed'
                      : 'Top-Up Successful')
                : (operationType == OperationType.transfer
                      ? 'Transfer Failed'
                      : operationType == OperationType.debin
                      ? 'DEBIN Failed'
                      : 'Top-Up Failed'),
...
                foregroundColor: Colors.white,
                padding: const EdgeInsets.symmetric(vertical: 16),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(8),
                ),
              ),
              child: const Text('Done', style: TextStyle(fontSize: 16)),
            ),
          ),
        ],
      ),
    );
  }
...
