...
                size: 80,
              ),
              const SizedBox(height: 16),
              Text(
                success
                    ? (operationType == OperationType.transfer
                          ? 'Transfer Successful'
                          : operationType == OperationType.debin
                          ? 'DEBIN Request Sent'
                          : 'Top-Up Successful')
                    : (operationType == OperationType.transfer
                          ? 'Transfer Failed'
                          : operationType == OperationType.debin
...
