...
            text: widget.submitButtonText,
            isLoading: widget.isLoading,
            onPressed: _submitForm,
          ),
          const SizedBox(height: 20),
          TextButton(
            key: const ValueKey('alternate_auth_button'),
            onPressed: widget.onAlternateAuthPressed,
            child: RichText(
              text: TextSpan(
                text: widget.alternateAuthText,
                style: const TextStyle(
                  color: LibraColors.secondaryText,
...
